--- a/CORSO HACKERGEN/contacts.css
+++ b/CORSO HACKERGEN/contacts.css
@@ -1,3 +1,6 @@
+/* ============================ */
+/* ========== CLASSI ========== */
+
 .contacts-section {
     display: flex;
     flex-direction: row;
@@ -7,4 +10,20 @@
 
 .contacts-item h2 {
     margin-bottom: 2rem;
+}
+
+
+/* ========================= */
+/* ===== MOBILE LAYOUT ===== */
+
+@media (max-width: 768px) {
+    .contacts-section {
+        flex-direction: column;
+    }
+    .contacts-item h2 {
+        margin-bottom: 0;
+    }
+    .contacts-section > :not(:last-child) {
+        margin-bottom: 2rem;
+    }
 }
