--- a/CORSO HACKERGEN/style.css
+++ b/CORSO HACKERGEN/style.css
@@ -9,10 +9,6 @@
     margin: 0;
 }
 
-
-/* ========================== */
-/* ========== BODY ========== */
-
 body {
     font-family: 'Roboto', sans-serif;
 }
@@ -167,4 +163,105 @@ p {
     width: 100%;
     height: 100%;
     
+}
+
+
+/* ========================= */
+/* ===== MOBILE LAYOUT ===== */
+
+@media (max-width: 768px) {
+    h1 {
+        font-size: 2.5rem;
+        line-height: 44px;
+    }
+    h2 {
+        font-size: 2rem;
+        line-height: 40px;
+    }
+    h3 {
+        font-size: 1.125rem;
+        line-height: 24px;
+    }
+    .title-block {
+        margin-top: 0%;
+    }
+
+
+    /* ========================= */
+    /* ====== BURGER MENU ====== */
+    
+    .toggler {
+        opacity: 0;
+        z-index: 3;
+        display: block;
+        cursor: pointer;
+        width: 30px;
+        height: 10px;
+    }
+
+    .burger-menu {
+        position: absolute;
+        right: 0;
+        z-index: 2;
+        width: 30px;
+        height: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-end;
+    }
+
+    .burger-menu > div {
+        position: relative;
+        width: 100%;
+        height: 3px;
+        background-color: var(--primary500);
+    }
+
+    .burger-menu > div::before {
+        content: "";
+        position: absolute;
+        top: -10px;
+        width: 100%;
+        height: 3px;
+        background-color: inherit;
+    }
+
+    .toggler:checked {
+        height: 30px;
+    }
+
+    .toggler:checked + .burger-menu > div {
+        transform: rotate(135deg);
+        position: absolute;
+        top: 0;
+    }
+
+    .toggler:checked + .burger-menu > div::before {
+        transform: rotate(90deg);
+        top: 0;
+    }
+
+    .toggler:checked ~ .menu {
+        z-index: 1;
+        display: flex;
+    }
+
+    nav {
+        position: relative;
+    }
+
+    nav .menu {
+        position: fixed;
+        height: 100vh;
+        width: 100vw;
+        display: none;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        top: 50%;
+        left: 50%;
+        background-color: white;
+        transform: translate(-50%, -50%); /* Per allineare gli elementi al centro della pagina */
+    }
 }
